<resources>
    <string name="app_name">ComicDev</string>
    <string name="title_activity_onboarding">OnboardingActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="onboarding_title_1">Marvel Official API</string>
    <string name="onboarding_title_2">Comics</string>
    <string name="onboarding_title_3">Characters</string>
    <string name="onboarding_text_1">Get excited with all the official content
    that marvel puts at your disposal</string>
    <string name="onboarding_text_2">Enjoy the best official comics
    marvel</string>
    <string name="onboarding_text_3">Admire all your favorite characters
    from the comics</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="default_next">Next</string>
    <string name="finish">Finish</string>
    <string name="loading_text">Loading...</string>
    <string-array name="Gender">
        <item>Male</item>
        <item>Female</item>
        <item>Unspecified</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="main_database">ComicDevUser</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="full_name">Full Name</string>
    <string name="age">Age</string>
    <string name="continue_button">Continue</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="favorite_comics">Favorite Comics</string>
    <string name="favorite_characters">Favorite Characters</string>
    <string name="most_popular">Most Popular</string>
    <string name="complete_collection">Complete collection</string>
    <string name="comics">Comics</string>
    <string name="characters">Characters</string>
    <string name="gender">Gender</string>
</resources>