<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_background"
    tools:context=".ui.favorites.FavoritesFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_profile"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/darker_grey"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/text_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="User profile"
        android:textColor="@color/light_grey"
        android:textSize="24dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card_profile" />

    <TextView
        android:id="@+id/text_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="Age"
        android:textColor="@color/light_grey"
        android:textSize="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_username" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_edit_profile"
        android:layout_width="175dp"
        android:layout_height="60dp"
        android:backgroundTint="@color/darker_grey"
        android:text="@string/edit_profile"
        android:textAllCaps="false"
        android:layout_marginTop="10dp"
        android:textColor="@color/white"
        app:cornerRadius="45dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_age" />

    <TextView
        android:id="@+id/text_profile_comics"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/favorite_comics"
        android:textColor="@color/default_red"
        android:textSize="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_edit_profile" />

    <ImageView
        android:id="@+id/red_bar_1"
        android:layout_width="100dp"
        android:layout_height="5dp"
        android:background="@color/default_red"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_profile_comics"
        android:layout_marginStart="20dp"/>

    <TextView
        android:id="@+id/text_profile_characters"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginStart="20dp"
        android:text="@string/favorite_characters"
        android:textColor="@color/default_red"
        android:textSize="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/red_bar_1" />

    <ImageView
        android:id="@+id/red_bar_2"
        android:layout_width="100dp"
        android:layout_height="5dp"
        android:background="@color/default_red"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_profile_characters"
        android:layout_marginStart="20dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>